--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">testOTT</string>
+    <string name="app_name">whereOTT</string>
     <string name="title_home">홈</string>
     <string name="title_movie">영화</string>
     <string name="title_dashboard">TV</string>
