--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <string name="popular">인기순</string>
 
+    <string name="drawer_opened">네비게이션 열림</string>
+    <string name="drawer_closed">네비게이션 닫힘</string>
+
 </resources>
